// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods submitRequest graphql failure 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submission error
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
  >
    <SubmitPane
      error={[Error: Error submitting]}
      state="error"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submitting…
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
  >
    <SubmitPane
      state="submitting"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 2`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Success: Case 17-00001615
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
  >
    <SubmitPane
      state="success"
      submittedRequest={
        Object {
          "address": "City Hall Plaza, Boston, MA",
          "description": "A cosmic encursion seems likely.",
          "id": "17-00001615",
          "mediaUrl": "https://pbs.twimg.com/media/C22X9ODXgAABGKS.jpg",
          "requestedAtString": "January 1, 2017 2:00 PM",
        }
      }
    />
  </FormDialog>
</div>
`;

exports[`rendering contact 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <div
    className="p-a400 br br-t400 br--y css-1t9hh8g"
    style={
      Object {
        "maxWidth": 800,
      }
    }
  >
    <div>
      <div>
        <div
          className="sh sh--y"
        >
          <h2
            className="sh-title"
          >
            Cosmic Incursion
          </h2>
        </div>
        <p
          className="m-v300 t--info"
        >
          Contact info will not be shared with public. Leave blank to submit anonymously.
        </p>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            First Name 
            (required)
          </span>
          <input
            className="txt-f"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            style={
              Object {
                "width": "100%",
              }
            }
            type="text"
            value=""
          />
        </label>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            Last Name 
            (required)
          </span>
          <input
            className="txt-f"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            style={
              Object {
                "width": "100%",
              }
            }
            type="text"
            value=""
          />
        </label>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            Email
          </span>
          <input
            className="txt-f"
            name="email"
            onChange={[Function]}
            placeholder="Email"
            style={
              Object {
                "width": "100%",
              }
            }
            type="email"
            value=""
          />
        </label>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            Phone
          </span>
          <input
            className="txt-f"
            name="phone"
            onChange={[Function]}
            placeholder="Phone"
            style={
              Object {
                "width": "100%",
              }
            }
            type="tel"
            value=""
          />
        </label>
      </div>
      <div
        className="g"
      >
        <div
          className="g--9"
        />
        <button
          className="btn g--33 m-v300"
          disabled={true}
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering location 1`] = `
<div
  className={
    Object {
      "data-css-d1r1f": "",
    }
  }
>
  <div
    className="p-a400 br br-t400 br--y css-1t9hh8g"
    style={Object {}}
  >
    <div
      className={
        Object {
          "data-css-1szwbq4": "",
        }
      }
    >
      <h3
        className="t--info"
      >
        Where is the problem happening?
      </h3>
      <hr
        className="hr hr--dash"
      />
      
      <form
        className="sf sf--sm sf--y m-v300"
        onSubmit={[Function]}
      >
        <div
          className="sf-i"
        >
          <input
            className="sf-i-f"
            onInput={[Function]}
            placeholder="Search for an address…"
            type="text"
            value=""
          />
          <button
            className="sf-i-b"
            disabled={true}
            type="submit"
          >
            Search
          </button>
        </div>
      </form>
      <div
        className="g css-1k8tu3j"
      >
        <div
          className="g--6"
        />
        <button
          className="btn g--6"
          disabled={true}
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering questions 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <div
    className="p-a400 br br-t400 br--y css-1t9hh8g"
    style={Object {}}
  >
    <div>
      <div
        className="sh sh--y"
      >
        <h2
          className="sh-title"
        >
          Cosmic Incursion
        </h2>
      </div>
      <div
        className="g g--top"
      >
        <div
          className="g--7 m-v500"
        >
          <textarea
            className={
              Object {
                "data-css-1gh870p": "",
              }
            }
            defaultValue=""
            name="description"
            onBlur={[Function]}
            onInput={[Function]}
            placeholder="How can we help?"
          />
          <div>
            <label
              className="txt"
            >
              <span
                className="txt-l"
              >
                Please provide any other relevant information:
                 
              </span>
              <textarea
                className="txt-f"
                name="ST-CMTS"
                onChange={[Function]}
                rows="5"
                value=""
              />
            </label>
          </div>
          <hr
            className="hr hr--dash m-v500"
          />
          <div>
            <label
              className="txt"
            >
              <span
                className="txt-l"
              >
                **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                 
              </span>
              <input
                className="txt-f"
                name="INFO-CSIRMV1"
                onChange={[Function]}
                type="text"
                value=""
              />
            </label>
          </div>
          <hr
            className="hr hr--dash m-v500"
          />
          <div>
            <div>
              <div
                className="m-v300"
              >
                <span
                  className="txt-l"
                >
                  How many dimensions have been breached?
                   
                  (required)
                </span>
              </div>
              <div
                className="g"
              >
                <div
                  className="g--12"
                >
                  <label
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="One"
                    />
                    <span
                      className="ra-l"
                    >
                      One
                    </span>
                  </label>
                  <label
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="Two"
                    />
                    <span
                      className="ra-l"
                    >
                      Two
                    </span>
                  </label>
                  <label
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="Three"
                    />
                    <span
                      className="ra-l"
                    >
                      Three
                    </span>
                  </label>
                  <label
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="More than Three"
                    />
                    <span
                      className="ra-l"
                    >
                      More than Three
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="g--5 m-v500"
        >
          <div
            className="css-14detlc"
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            <img
              alt=""
              height="324"
              src="/static/img/311-watermark.svg"
              style={
                Object {
                  "display": "block",
                  "height": "auto",
                  "width": "100%",
                }
              }
              width="479"
            />
            <input
              accept="image/*"
              multiple={false}
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              type="file"
            />
          </div>
        </div>
      </div>
      <div
        className="m-v500"
      >
        <div
          className="g"
        >
          <div
            className="g--9"
          />
          <button
            className="btn g--33"
            disabled={true}
            onClick={[Function]}
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
